- Bug fixes - Player names fully integrated with translation - Google ads implemented
Signed-off-by: Jani Banigev <jani.bangiev@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,22 @@
     package="com.example.randomdrinks">
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PlayerSelect"></activity>
+        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        <!-- My ID:  ca-app-pub-3029112169347935~1733106035 -->
+        <!-- My interstitial ID:  ca-app-pub-3029112169347935/6632997356 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
+
+        <activity android:name=".PlayerSelect"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".PopActivity"
             android:theme="@style/AppTheme.PopMe" />
